fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -475,7 +475,7 @@ input[type='submit']:hover, button:hover {
 	max-width: 100%;
 	vertical-align: middle;
 	padding: 0;
-	padding-left: 25vw;
+	padding-left: 22vw;
 	margin: 0;
     text-align: left;
     overflow-x: scroll;
